tests/transpiler/x/swift/dataset_where_filter.swift
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:08 GMT+7
let people = [["name": "Alice", "age": 30], ["name": "Bob", "age": 15], ["name": "Charlie", "age": 65], ["name": "Diana", "age": 45]]
let adults = ({ var _res: [[String: Any]] = []
for person in people {
    if (person["age"]! >= 18) {
        _res.append(["name": person["name"]!, "age": person["age"]!, "is_senior": (person["age"]! >= 60)])
    }
}
return _res })()
print("--- Adults ---")
for person in adults {
    print(person["name"]!, "is", person["age"]!, (person["is_senior"]! ? " (senior)" : ""))
}
